Get gotchi names

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ packages/hardhat/*.txt
 **/node_modules
 
 packages/hardhat/artifacts*
+packages/hardhat/typechain-types
 packages/hardhat/deployments
 packages/react-app/src/contracts/*
 !packages/react-app/src/contracts/external_contracts.js
