--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = packages/services/optimism
 	url = https://github.com/ethereum-optimism/optimism
 	branch = regenesis/0.4.0
+[submodule "packages/hardhat/contracts/tests/aavegotchi/aavegotchi-contracts"]
+	path = packages/hardhat/contracts/tests/aavegotchi/aavegotchi-contracts
+	url = https://github.com/aavegotchi/aavegotchi-contracts.git
